// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mobx updateResources GraphQl updates the store 1`] = `
Object {
  "checklists": Object {
    "4": Object {
      "attributes": Object {
        "id": 4,
        "name": "Onboarding GraphQL",
      },
      "id": "4",
      "links": null,
      "relationships": Object {
        "tasks": Object {
          "data": Array [
            Object {
              "id": 7,
              "type": "tasks",
            },
            Object {
              "id": 8,
              "type": "tasks",
            },
          ],
        },
      },
      "type": "checklists",
    },
    "5": Object {
      "attributes": Object {
        "id": 5,
        "name": "Project Audit GraphQL",
      },
      "id": "5",
      "links": null,
      "relationships": Object {
        "tasks": Object {
          "data": Array [
            Object {
              "id": 9,
              "type": "tasks",
            },
            Object {
              "id": 10,
              "type": "tasks",
            },
          ],
        },
      },
      "type": "checklists",
    },
    "6": Object {
      "attributes": Object {
        "id": 6,
        "name": "QA Checklist GraphQL",
      },
      "id": "6",
      "links": null,
      "relationships": Object {
        "tasks": Object {
          "data": Array [
            Object {
              "id": 11,
              "type": "tasks",
            },
            Object {
              "id": 12,
              "type": "tasks",
            },
          ],
        },
      },
      "type": "checklists",
    },
  },
  "tasks": Object {
    "10": Object {
      "attributes": Object {
        "description": "Project Audit Graph 10",
        "id": 10,
      },
      "id": "10",
      "links": null,
      "relationships": Object {},
      "type": "tasks",
    },
    "11": Object {
      "attributes": Object {
        "description": "QA Checklist Graph 11",
        "id": 11,
      },
      "id": "11",
      "links": null,
      "relationships": Object {},
      "type": "tasks",
    },
    "12": Object {
      "attributes": Object {
        "description": "QA Checklist Graph 12",
        "id": 12,
      },
      "id": "12",
      "links": null,
      "relationships": Object {},
      "type": "tasks",
    },
    "7": Object {
      "attributes": Object {
        "description": "Onboarding Graph 7",
        "id": 7,
      },
      "id": "7",
      "links": null,
      "relationships": Object {},
      "type": "tasks",
    },
    "8": Object {
      "attributes": Object {
        "description": "Onboarding Graph 8",
        "id": 8,
      },
      "id": "8",
      "links": null,
      "relationships": Object {},
      "type": "tasks",
    },
    "9": Object {
      "attributes": Object {
        "description": "Project Audit Graph 9",
        "id": 9,
      },
      "id": "9",
      "links": null,
      "relationships": Object {},
      "type": "tasks",
    },
  },
}
`;

exports[`mobx updateResources JsonApi updates the store 1`] = `
Object {
  "checklists": Object {
    "1": Object {
      "attributes": Object {
        "name": "Onboarding Rest",
      },
      "id": 1,
      "links": Object {
        "self": "http://example.com/checklists/1",
      },
      "relationships": Object {
        "tasks": Object {
          "data": Array [
            Object {
              "id": 1,
              "type": "tasks",
            },
            Object {
              "id": 2,
              "type": "tasks",
            },
          ],
          "links": Object {
            "related": "http://example.com/checklists/1/tasks",
            "self": "http://example.com/checklists/1/relationships/tasks",
          },
        },
      },
      "type": "checklists",
    },
    "2": Object {
      "attributes": Object {
        "name": "Project Audit Rest",
      },
      "id": 2,
      "links": Object {
        "self": "http://example.com/checklists/2",
      },
      "relationships": Object {
        "tasks": Object {
          "data": Array [
            Object {
              "id": 3,
              "type": "tasks",
            },
            Object {
              "id": 4,
              "type": "tasks",
            },
          ],
          "links": Object {
            "related": "http://example.com/checklists/2/tasks",
            "self": "http://example.com/checklists/2/relationships/tasks",
          },
        },
      },
      "type": "checklists",
    },
    "3": Object {
      "attributes": Object {
        "name": "QA Checklist Rest",
      },
      "id": 3,
      "links": Object {
        "self": "http://example.com/checklists/3",
      },
      "relationships": Object {
        "tasks": Object {
          "data": Array [
            Object {
              "id": 5,
              "type": "tasks",
            },
            Object {
              "id": 6,
              "type": "tasks",
            },
          ],
          "links": Object {
            "related": "http://example.com/checklists/3/tasks",
            "self": "http://example.com/checklists/3/relationships/tasks",
          },
        },
      },
      "type": "checklists",
    },
  },
  "tasks": Object {
    "1": Object {
      "attributes": Object {
        "description": "Onboarding REST 1",
      },
      "id": 1,
      "links": Object {
        "self": "http://example.com/tasks/1",
      },
      "type": "tasks",
    },
    "2": Object {
      "attributes": Object {
        "description": "Onboarding REST 2",
      },
      "id": 2,
      "links": Object {
        "self": "http://example.com/tasks/2",
      },
      "type": "tasks",
    },
    "3": Object {
      "attributes": Object {
        "description": "Project Audit Rest 3",
      },
      "id": 3,
      "links": Object {
        "self": "http://example.com/tasks/3",
      },
      "type": "tasks",
    },
    "4": Object {
      "attributes": Object {
        "description": "Project Audit Rest 4",
      },
      "id": 4,
      "links": Object {
        "self": "http://example.com/tasks/4",
      },
      "type": "tasks",
    },
    "5": Object {
      "attributes": Object {
        "description": "QA Checklist Rest 5",
      },
      "id": 5,
      "links": Object {
        "self": "http://example.com/tasks/5",
      },
      "type": "tasks",
    },
    "6": Object {
      "attributes": Object {
        "description": "QA Checklist Rest 6",
      },
      "id": 6,
      "links": Object {
        "self": "http://example.com/tasks/6",
      },
      "type": "tasks",
    },
  },
}
`;

exports[`mobx updateResources clearResources clears the store for the provided resources 1`] = `
Object {
  "checklists": Object {},
  "tasks": Object {},
}
`;

exports[`mobx updateResources removeResource clears the store for the provided resources 1`] = `
Object {
  "checklists": Object {
    "2": Object {},
  },
}
`;

exports[`mobx updateResources removeResources clears the store for the provided resources 1`] = `
Object {
  "checklists": Object {},
}
`;
